added boston project

--- a/machine-learning-engineering/projects/boston_housing/boston_housing.ipynb
+++ b/machine-learning-engineering/projects/boston_housing/boston_housing.ipynb
@@ -459,7 +459,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "###### The maximum depth of 3.\n",
+    "\n",
+    "###### In the model, from the maximum depth of 4 and on, the model starts to overfit on the training data, not generalizing well when new data is presented to it, showing lower scores on the validation data, being that said, the model with less complexity that performs the better should be the one used. "
    ]
   },
   {
@@ -487,7 +491,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "###### The grid search is a technique to validate and explore various hyperparameters and the combination of those.\n",
+    "###### The grid search can be applied to explore automatically the combination of various hyperparameters, taking away the pain of manually testing each of those by hand for the analyst, where infinite parameters can be tested, like in the C hyperparameter of the support vector classifier and the kernel type, where C is a number that can range from very low values to very big ones, being responsible for big performance changes on the model accuracy, that said, the grid serch is a powerfull tool for automation of these exploration tasks that an analyst is responsible to do when searching for the best performance model."
    ]
   },
   {
@@ -509,7 +516,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "###### The K-fold cross validation is a techinque that alleviate the overfit impact that the data used for training and testing can have on the model. The \"K\" stands for how many subsets the data will be split, being random or not. The algorithm consists of K loops, where on each step, the model is trained using k-1 subsets of the data, and validating the model trained with the \"left over\" fold, the loop then starts over choosing other fold as the test one, and stops when all of the subsets were used as the validation one, resulting in an accuracy that is the average of all the accuracies in each step of the proccess.\n",
+    "\n",
+    "###### When performing a grid search, various hyperparameters can exhibit a better performance depending on the way data have been split, because of the nuances of the weights applied in the model, resulting in a unrealistic accuracy score. K-fold can help to prevent this by shuffling and using different folds for comparison in the hyperparameters choice, creating a more reliable search for the optimized values."
    ]
   },
   {
@@ -731,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
